fixed white space top and bottom

--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,10 @@ a:hover {
 
 body {
   margin: 0;
+  padding: 0;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
 }
 
 h1 {
